--- a/Styles/index.css
+++ b/Styles/index.css
@@ -72,14 +72,24 @@
     .footer{
         background-image:linear-gradient(to bottom right, rgb(138, 208, 218), rgb(51, 26, 112));
         width: 100%;
-        height: 400px;
-        padding: 40px;
+        height: 560px;
+        padding: 80px;
     }
     .footerGridContainer{
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 20px;
+        grid-template-columns: repeat(4, 1fr);
+        column-gap: 10px;
+        row-gap: 40px;
     }
+    /* .footergrid:nth-child(1){
+        border-right: 1px solid white;
+    }
+    .footergrid:nth-child(2){
+        border-right: 1px solid white;
+    }
+    .footergrid:nth-child(3){
+        border-right: 1px solid white;
+    } */
     .footergrid:nth-child(1) > h5, p{
         color: rgb(37, 37, 37);
     }
@@ -88,16 +98,25 @@
     }
     .quicklinks{
         text-decoration: none;
-        color: rgb(37, 37, 37);
-    }
-    .quicklinks:hover{
         color: white;
     }
+    .quicklinks:hover{
+        color: rgb(80,80,80);
+    }
     .contactUsBtn{
-        background-color: white;
-        border: 1px solid rgb(138, 208, 218);
+        background-color: rgb(80,80,80);
+        color: rgb(138, 208, 218);
+        border:none;
         border-radius: 10px;
         padding: 10px;
+    }
+    .contactUsBtn:hover{
+        background-color: rgb(173, 172, 172);
+        color: rgb(21, 90, 100);
+        border:none;
+    }
+    .footergrid:nth-child(5){
+        grid-column: 1/5;
     }
     /* end of footer */
 }
