--- a/Styles/index.css
+++ b/Styles/index.css
@@ -3,14 +3,18 @@
 *{
     font-family: 'Nunito', sans-serif;
 }
-@media screen and (min-width:1025px) {
+@media screen and (min-width:320px){
+    body{
+        margin: 0 ;
+        padding: 0 auto;
+    }
     /* navigation */
     #logo-link{
         font-weight: bold;
         color: rgb(52, 123, 163);
     }
     .logo-img{
-        width: 90px;
+        width: 60px;
     } 
     .nav-links{
         font-weight:700;
@@ -23,31 +27,40 @@
     #activeLink{
         color: rgb(52, 123, 163);
     }
-    .seePricingContainer{
-        width: 100%;
+    #menubar{
+        color:rgb(52, 123, 163);
     }
-    
     /* end of navigation */
+    /* offcanvas */
+    .closebtn{
+        color: rgb(52, 123, 163);
+        border: none;
+        background: none;
+    }
+    #navbarContent{
+        width: 75%;
+    }
+    /* end of offcanvas */
 
     /* banner */
     .bannerContainer{
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
         margin: 5px;
     }
     .bannergrid:nth-child(1){
-        padding-top: 60px;
-        padding-left: 80px;
+        margin-top: 30px;
+        text-align: center;
     }
     .banner-title{
         color: rgb(52, 123, 163);
+        font-size: 22px;
     }
     .banner-tagline{
         margin-top:15px;
         color: rgb(80, 80, 80);
-    }
-    .button-container{
-        margin-top: 60px;
+        font-size: 15px;
+        margin-bottom:40px;
     }
     .see-pricing{
         background-image: linear-gradient(to bottom right, rgb(138, 208, 218), rgb(51, 26, 112));
@@ -57,39 +70,97 @@
         color: white;
         font-weight:500;
     }
-    .see-pricing:hover{
+    .see-pricing:active{
         color:rgb(52, 123, 163);
         background-image:none;
         background-color: white;
-        border:2px solid rgb(52, 123, 163);        
-        font-weight:500;
+        border:3px solid rgb(52, 123, 163);        
+        font-weight:600;
     }
     .bannerimg{
-        width:80%;
+        margin-top: 20px;
+        width:90%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    /* end of banner */
+
+    /* footer */
+    .footer{
+        background-image:linear-gradient(to bottom right, rgb(138, 208, 218), rgb(51, 26, 112));
+        width: 100%;
+        height: 1200px;
+        padding: 10px;
+        text-align: center;
+        padding-top: 30px;
+    }
+    .footerGridContainer{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        row-gap: 30px;
+    }
+    .footerlogo{
+        width: 30%;
+    }
+    .quicklinks{
+        text-decoration: none;
+        color: white;
+    }
+    .quicklinks:active{
+        color: rgb(80,80,80);
+    }
+    .contactUsBtn{
+        background-color: rgb(80,80,80);
+        color: rgb(138, 208, 218);
+        border:none;
+        border-radius: 10px;
+        padding: 10px;
+    }
+    .contactUsBtn:active{
+        background-color: rgb(173, 172, 172);
+        color: rgb(21, 90, 100);
+        border:none;
+    }
+    /* end of footer */
+}
+@media screen and (min-width:768px){
+    /* offcanvas */
+    #navbarContent{
+        width: 40%;
+    }
+    /* end of offcanvas */
+    /* banner */
+    .bannerContainer{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin: 5px;
+        
+    }
+    .bannergrid:nth-child(1){
+        padding-top: 20px;
+        padding-left: 30px;
+        text-align: start;
+    }
+    .bannergrid:nth-child(2){
+        grid-column: 2/3;
     }
     /* end of banner */
     /* footer */
     .footer{
         background-image:linear-gradient(to bottom right, rgb(138, 208, 218), rgb(51, 26, 112));
         width: 100%;
-        height: 560px;
-        padding: 80px;
+        height: 700px;
+        padding: 5px;
+        text-align: start;
     }
     .footerGridContainer{
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        column-gap: 10px;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 5px;
         row-gap: 40px;
+        margin-top: 30px;
     }
-    /* .footergrid:nth-child(1){
-        border-right: 1px solid white;
-    }
-    .footergrid:nth-child(2){
-        border-right: 1px solid white;
-    }
-    .footergrid:nth-child(3){
-        border-right: 1px solid white;
-    } */
     .footergrid:nth-child(1) > h5, p{
         color: rgb(37, 37, 37);
     }
@@ -114,6 +185,138 @@
         background-color: rgb(173, 172, 172);
         color: rgb(21, 90, 100);
         border:none;
+    }
+    .footergrid:nth-child(3){
+        grid-column: 2/2;
+        grid-row: 2/2;
+    }
+    .footergrid:nth-child(4){
+        grid-column: 2/2;
+        grid-row: 1/3;
+    }
+    .footergrid:nth-child(5){
+        grid-column: 1/3;
+    }
+    /* end of footer */
+}
+@media screen and (min-width:1025px) {
+    /* navigation */
+    /* #logo-link{
+        font-weight: bold;
+        color: rgb(52, 123, 163);
+    } */
+    .logo-img{
+        width: 90px;
+    } 
+    /* .nav-links{
+        font-weight:700;
+        color: rgb(80,80,80);
+        text-decoration: none;
+    } */
+    /* .nav-links:hover{
+        color: rgb(52, 123, 163);
+    } */
+    /* #activeLink{
+        color: rgb(52, 123, 163);
+    }   */
+    /* end of navigation */
+    /* banner */
+    .bannerContainer{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin: 5px;
+    }
+    .bannergrid:nth-child(1){
+        padding-top: 60px;
+        padding-left: 80px;
+        text-align: start;
+    }
+    .bannergrid:nth-child(2){
+        grid-column: 2/3;
+        opacity: 1;
+        filter:brightness(1)
+    }
+    .banner-title{
+        color: rgb(52, 123, 163);
+        font-size: 30px;
+    }
+    .banner-tagline{
+        margin-top:15px;
+        color: rgb(80, 80, 80);
+        font-size: 16px;
+    }
+    .button-container{
+        margin-top: 60px;
+    }
+    .see-pricing{
+        background-image: linear-gradient(to bottom right, rgb(138, 208, 218), rgb(51, 26, 112));
+        padding: 15px;
+        border-radius: 10px;
+        text-decoration: none;
+        color: white;
+        font-weight:500;
+    }
+    .see-pricing:hover{
+        color:rgb(52, 123, 163);
+        background-image:none;
+        background-color: white;
+        border:2px solid rgb(52, 123, 163);        
+        font-weight:500;
+    }
+    .bannerimg{
+        width:100%;
+    }
+    /* end of banner */
+    /* footer */
+    .footer{
+        background-image:linear-gradient(to bottom right, rgb(138, 208, 218), rgb(51, 26, 112));
+        width: 100%;
+        height: 560px;
+        padding: 80px;
+        text-align: start;
+    }
+    .footerGridContainer{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        column-gap: 10px;
+        row-gap: 40px;
+        margin-top: 10px;
+    }
+    .footergrid:nth-child(1) > h5, p{
+        color: rgb(37, 37, 37);
+    }
+    .footerlogo{
+        width: 30%;
+    }
+    .quicklinks{
+        text-decoration: none;
+        color: white;
+    }
+    .quicklinks:hover{
+        color: rgb(80,80,80);
+    }
+    .contactUsBtn{
+        background-color: rgb(80,80,80);
+        color: rgb(138, 208, 218);
+        border:none;
+        border-radius: 10px;
+        padding: 10px;
+    }
+    .contactUsBtn:hover{
+        background-color: rgb(173, 172, 172);
+        color: rgb(21, 90, 100);
+        border:none;
+    }
+    .footergrid:nth-child(2){
+        grid-column: 2/3;
+    }
+    .footergrid:nth-child(3){
+        grid-column: 3/4;
+        grid-row: 1/2;
+    }
+    .footergrid:nth-child(4){
+        grid-column: 4/5;
+        grid-row: 1/2;
     }
     .footergrid:nth-child(5){
         grid-column: 1/5;
